# c_starter_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: makefile_debug.yml  makefile_release.yml
src/: CMakeLists.txt
test/: test.mk
test/inc/: test_generated.h
